Restructure query result to scoredsegment object and add resultslimit
