# ferelight/models/query_post200_response_inner.py
@@ -1,91 +1,0 @@
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from ferelight.models.base_model import Model
-from ferelight import util
-
-
-class QueryPost200ResponseInner(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, segmentid=None, score=None):  # noqa: E501
-        """QueryPost200ResponseInner - a model defined in OpenAPI
-
-        :param segmentid: The segmentid of this QueryPost200ResponseInner.  # noqa: E501
-        :type segmentid: str
-        :param score: The score of this QueryPost200ResponseInner.  # noqa: E501
-        :type score: float
-        """
-        self.openapi_types = {
-            'segmentid': str,
-            'score': float
-        }
-
-        self.attribute_map = {
-            'segmentid': 'segmentid',
-            'score': 'score'
-        }
-
-        self._segmentid = segmentid
-        self._score = score
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'QueryPost200ResponseInner':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The _query_post_200_response_inner of this QueryPost200ResponseInner.  # noqa: E501
-        :rtype: QueryPost200ResponseInner
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def segmentid(self) -> str:
-        """Gets the segmentid of this QueryPost200ResponseInner.
-
-        The unique identifier of the segment.  # noqa: E501
-
-        :return: The segmentid of this QueryPost200ResponseInner.
-        :rtype: str
-        """
-        return self._segmentid
-
-    @segmentid.setter
-    def segmentid(self, segmentid: str):
-        """Sets the segmentid of this QueryPost200ResponseInner.
-
-        The unique identifier of the segment.  # noqa: E501
-
-        :param segmentid: The segmentid of this QueryPost200ResponseInner.
-        :type segmentid: str
-        """
-
-        self._segmentid = segmentid
-
-    @property
-    def score(self) -> float:
-        """Gets the score of this QueryPost200ResponseInner.
-
-        The similarity score of the segment.  # noqa: E501
-
-        :return: The score of this QueryPost200ResponseInner.
-        :rtype: float
-        """
-        return self._score
-
-    @score.setter
-    def score(self, score: float):
-        """Sets the score of this QueryPost200ResponseInner.
-
-        The similarity score of the segment.  # noqa: E501
-
-        :param score: The score of this QueryPost200ResponseInner.
-        :type score: float
-        """
-
-        self._score = score
