# openapi.yaml
@@ -44,6 +44,15 @@ components:
             segmentendabs:
                 type: number
                 description: The double value of the end time in seconds of the segment.
+        scoredsegment:
+          type: object
+          properties:
+            segmentid:
+              type: string
+              description: The unique identifier of the segment.
+            score:
+              type: number
+              description: The similarity score of the segment.
 paths:
   /objectinfo/{objectid}:
     get:
@@ -163,6 +172,9 @@ paths:
                 ocrtext:
                   type: string
                   description: The OCR text.
+                limit:
+                  type: integer
+                  description: The maximum number of results to return.
       responses:
         "200":
           description: "OK"
@@ -171,11 +183,4 @@ paths:
               schema:
                 type: array
                 items:
-                  type: object
-                  properties:
-                    segmentid:
-                      type: string
-                      description: The unique identifier of the segment.
-                    score:
-                      type: number
-                      description: The similarity score of the segment.
+                    $ref: "#/components/schemas/scoredsegment"
